Вторая версия проекта

--- a/index.html
+++ b/index.html
@@ -30,6 +30,65 @@
             <img class="offer__img" src="/img/solar-panel.png" alt="solar-panel">
         </div>
     </section>
+    <section class="form">
+        <div class="form__container">
+            <h1 class="form__title">Оставьте свои контакты.</h1>
+            <p class="form__subtitle">Поможем подобрать модель.<br>Выбрать удобный вариант доставки и
+                установки.<br>Гарантия возврата денег.</p>
+            <form class="form__word" action="">
+                <div class="form__group">
+                    <label class="form__group_title" for="name">Ваше имя</label>
+                    <input class="form__group_action" type="text" placeholder="Введите имя" id="name">
+                </div>
+                <div class="form__group">
+                    <label class="form__group_title" for="email">Электронный адресс</label>
+                    <input class="form__group_action" type="email" placeholder="***@yandex.ru" id="email">
+                </div>
+                <div class="form__group">
+                    <label class="form__group_title" for="phone">Номер телефона</label>
+                    <input class="form__group_action" type="tel" placeholder="7 (999) 999-99-99" id="phone">
+                </div>
+                <div class="form__group">
+                    <label class="form__group_title" for="budget">Примерный бюджет</label>
+                    <select class="form__group_action" name="" id="budget">
+                        <option value="10-30">10 000₽ – 30 000₽</option>
+                        <option value="30-60">30 000₽ – 60 000₽</option>
+                        <option value="60-100">60 000₽ – 100 000₽</option>
+                        <option value="100+">100 000₽</option>
+                    </select>
+                </div>
+                <button type="submit" class="form__submit button">Отправить заявку</button>
+            </form>
+        </div>
+    </section>
+    <footer class="footer">
+        <div class="footer__container">
+            <div class="footer__group">
+                <h3 class="footer__title">Позвони нам:</h3>
+                <div class="footer__links">
+                    <a href="tel:74959999999" class="footer__links_active">+7 (495) 999-99-99</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3 class="footer__title">Решения для дома:</h3>
+                <div class="footer__links">
+                    <a href="#" class="footer__links_active">Солнечные панели GreenRobotic</a>
+                    <a href="#" class="footer__links_active">Системы солнечных панелей GreenStation</a>
+                </div>
+            </div>
+            <div class="footer__group">
+                <h3 class="footer__title">Компания</h3>
+                <div class="footer__links">
+                    <a href="#" class="footer__links_active">Контакты</a>
+                    <a href="#" class="footer__links_active">Вакансии</a>
+                    <a href="#" class="footer__links_active">СМИ</a>
+                </div>
+            </div>
+        </div>
+        <div class="footer__copyright">
+            GreenCorp © 2021.
+        </div>
+    </footer>
 </body>
 
 </html>
