--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         </div>
     </header>
     <section class="offer">
+        <canvas class="orb-canvas" id="orb-canvas"></canvas>
         <div class="offer__left animate__animated animate__fadeInLeft animate__slow">
             <h1 class="offer__title">Солнечные панели GreenRobotic</h1>
             <p class="offer__subtitle">Производите дешёвую экологически чистую электроэнергию из солнечного света</p>
@@ -30,6 +31,94 @@
         <div class="offer__right animate__animated animate__fadeInRight animate__slow">
             <img class="offer__sun-img" src="/img/sun.png" alt="sun">
             <img class="offer__img" src="/img/solar-panel.png" alt="solar-panel">
+        </div>
+    </section>
+    <section class="features">
+        <div class="cards">
+            <div class="card">
+                <div class="card__logo yellow">
+                    <i class="fas fa-solar-panel"></i>
+                </div>
+                <h3>Уменьшите счета за электричество</h3>
+                <p>
+                    Используйте чистую солнечную энергию для питания своего дома: уменьшите зависимость от электросети и
+                    счета за электричество.
+                </p>
+            </div>
+            <div class="card">
+                <div class="card__logo red">
+                    24/7
+                </div>
+                <h3>Мониторинг электроэнергии</h3>
+                <p>
+                    Управляйте своей системой солнечных панелей из любой точки мира с помощью специального мобильного
+                    приложения.
+                </p>
+            </div>
+            <div class="card">
+                <div class="card__logo green">
+                    <i class="fas fa-chart-line"></i>
+                </div>
+                <h3>Максимальная эффективность</h3>
+                <p>
+                    Солнечные панели GreenRobotic обеспечивают максимальное производство энергии круглый год, даже на
+                    крышах со сложными углами.
+                </p>
+            </div>
+        </div>
+        <div class="features__border">
+            <div class="features__feedback">
+                <div class="features__feedback-left">
+                    <h2>
+                        Нам доверяет
+                        <br>
+                        <div class="features__clients-count">5000+</div> счастливых клиентов
+                    </h2>
+                    <p>
+                        Мы помогли тысячам людей перейти на зеленую энергию.
+                        <br>
+                        После заказа мы позаботимся обо всем: доставка панелей, проект, установка, помощь в
+                        использовании
+                    </p>
+                </div>
+                <div class="features__feedback-right">
+                    <div class="features__box features__savings-box">
+                        <h3>30 млн ₽</h3>
+                        <p>Помогаем экономить нашим клиентам ежемесячно</p>
+                    </div>
+                    <div class="features__box features__rate-box">
+                        <h3>4.7</h3>
+                        <p class="stars">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </p>
+                        <p>
+                            Средняя оценка наших клиентов
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="promo">
+        <div class="promo__image"></div>
+        <div class="promo__right">
+            <div class="promo__text">
+                <h2>Зарядите свой дом</h2>
+                <p>
+                    Солнечные панели сертифицированы мировыми экспертами: система безопасна и надежна.
+                </p>
+                <p>
+                    Следите за накоплением энергии вашего дома в режиме реального времени и настраивайте процент расхода
+                    и накопления энергии.
+                </p>
+                <div class="promo__button-wrap">
+                    <button type="button">Заказать <i class="fas fa-chevron-right"></i></button>
+                </div>
+            </div>
         </div>
     </section>
     <section class="form">
@@ -92,6 +181,8 @@
         </div>
     </footer>
     <script src="/fa/js/all.min.js"></script>
+    <script src="/js/script.js"></script>
+    <script src="/js/animation.js"></script>
 </body>
 
 </html>
